Update Google Charts, prevent a flicker on hover, improve the styling and add vote % by default

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -54,3 +54,9 @@ a.profile {
     text-decoration: none;
   }
 }
+
+// Work around a flicker when hovering on the poll bars
+// (https://stackoverflow.com/questions/37902708/google-charts-tooltip-flickering)
+.google-visualization-tooltip {
+  pointer-events:none;
+}
